@@ -169,6 +169,7 @@ t/26-combinatorial.t
 t/26-digits.t
 t/26-iscarmichael.t
 t/26-isfundamental.t
+t/26-isgaussianprime.t
 t/26-ispower.t
 t/26-issemiprime.t
 t/26-issquarefree.t
